feat: add test tags and fix README.md